Se crea propiedades alquiler y venta y sus respectivos js para llamar a l funcion

--- a/propiedades_alquiler.html
+++ b/propiedades_alquiler.html
@@ -37,11 +37,7 @@
   </main>
   <div class="container mt-5 mb-5">
     <!-- Propiedades en venta -->
-    <section id="venta">
-    </section>
-    <hr />
-    <!-- Propiedades en alquiler -->
-    <section id="alquiler" class="mb-5">
+    <section id="alquiler">
     </section>
   </div>
   <!-- Font awesome -->
@@ -51,7 +47,7 @@
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
     crossorigin="anonymous"></script>
   <script src="./assets/js/script.js"></script>
-  <script src="./assets/js/index.js"></script>
+  <script src="./assets/js/alquiler.js"></script>
 </body>
 
 </html>
