--- a/propiedades_venta.html
+++ b/propiedades_venta.html
@@ -26,7 +26,7 @@
             <a class="nav-link" href="./propiedades_venta.html">En venta</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./propiedades_venta.html">Alquiler</a>
+            <a class="nav-link" href="./propiedades_alquiler.html">Alquiler</a>
           </li>
         </ul>
       </div>
@@ -35,7 +35,7 @@
   <main class="container-fluid main-section">
     <h1 class="text-white">Encuentra tu nueva propiedad</h1>
   </main>
-  <div class="container mt-5">
+  <div class="container mt-5 mb-5">
     <!-- Propiedades en venta -->
     <section id="venta">
     </section>
@@ -47,6 +47,7 @@
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
     crossorigin="anonymous"></script>
   <script src="./assets/js/script.js"></script>
+  <script src="./assets/js/venta.js"></script>
 </body>
 
 </html>
