--- a/propiedades_alquiler.html
+++ b/propiedades_alquiler.html
@@ -36,7 +36,7 @@
     <h1 class="text-white">Encuentra tu nueva propiedad</h1>
   </main>
   <div class="container mt-5 mb-5">
-    <!-- Propiedades en venta -->
+    <!-- Propiedades en alquiler -->
     <section id="alquiler">
     </section>
   </div>
